Project structure update and file upload: New changes modifying folder structure for controls and lessons. Lessons audio and pdf files uploaded.

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
 
     <!-- Consistent Header -->
-    <h1 class="page-header">John Deere Tractor Series 5M - Controls Interactive Training</h1>
+    <h1 class="page-header">John Deere Tractor Series 5M - Operator Interactive Training</h1>
 
     <div class="nav-container">
         <ul class="nav-list">
@@ -69,22 +69,22 @@
             <!-- === First Main Option === -->
             <li>
                 <button class="main-option-button" aria-expanded="false">
-                    CAB
+                    CAB CONTROLS INTERACTION
                 </button>
                 <ul class="submenu-content">
                     <!-- === EDIT Submenu Link Text and Verify href === -->
-                    <li><a href="files/pages/section_01.html">Main Cabin Controls - Front / Rear</a></li>
-                    <li><a href="files/pages/section_02.html">Right Console Controls</a></li>
-                    <li><a href="files/pages/section_03.html">Section 3 Title</a></li>
-                    <li><a href="files/pages/section_04.html">Section 4 Title</a></li>
-                    <li><a href="files/pages/section_05.html">Section 5 Title</a></li>
+                    <li><a href="files/controls_pages/section_01.html">Main Cabin Controls - Front / Rear</a></li>
+                    <li><a href="files/controls_pages/section_02.html">Right Console Controls</a></li>
+                    <li><a href="files/controls_pages/section_03.html">Section 3 Title</a></li>
+                    <li><a href="files/controls_pages/section_04.html">Section 4 Title</a></li>
+                    <li><a href="files/controls_pages/section_05.html">Section 5 Title</a></li>
                 </ul>
             </li>
 
             <!-- === Second Main Option === -->
             <li>
                 <button class="main-option-button" aria-expanded="false">
-                    IOOS (Isolated Open Operator Station)
+                    OPERATOR´S MANUAL LESSONS
                 </button>
                 <ul class="submenu-content">
                     <!-- === EDIT Submenu Link Text and Verify href === -->
