Re-structure landing page main menu. Update html and css to match new structure. Upload new png files for button links

--- a/files/controls_overview.html
+++ b/files/controls_overview.html
@@ -14,7 +14,7 @@
     <!-- Path: Up one level from files/ to root index.html -->
     <a href="../index.html" class="back-button">Back to Main Menu</a>
 
-    <h1 class="page-header">OPERATOR´S MANUAL LESSONS</h1>
+    <h1 class="page-header">CAB CONTROLS INTERACTION</h1>
 
     <div class="lessons-overview-container-grid"> <!-- Changed container class -->
 
