--- a/index.html
+++ b/index.html
@@ -13,43 +13,24 @@
 
     <!-- Consistent Header -->
     <h1 class="page-header">John Deere Tractor Series 5M - Operator Interactive Training</h1>
-
     <div class="nav-container">
-        <ul class="nav-list">
-
-            <!-- === First Main Option === -->
-            <li>
-                <button class="main-option-button" aria-expanded="false">
-                    CAB CONTROLS INTERACTION
-                </button>
-                <ul class="submenu-content">
-                    <!-- === EDIT Submenu Link Text and Verify href === -->
-                    <li><a href="files/controls_pages/section_01.html">Main Cabin Controls - Front / Rear</a></li>
-                    <li><a href="files/controls_pages/section_02.html">Right Console Controls</a></li>
-                    <li><a href="files/controls_pages/section_03.html">Section 3 Title</a></li>
-                    <li><a href="files/controls_pages/section_04.html">Section 4 Title</a></li>
-                    <li><a href="files/controls_pages/section_05.html">Section 5 Title</a></li>
-                </ul>
-            </li>
-            <!-- === Second Main Option === -->
-            <li>
-                <button class="main-option-button" aria-expanded="false">
-                    OPERATOR´S MANUAL LESSONS
-                </button>
-                <ul class="submenu-content">
-                    <!-- === EDIT Submenu Link Text and Verify href === -->
-                    <li><a href="files/lessons_pages/Lesson 01_Introduction/l1.html">Lesson 01 - Introduction</a></li>
-                    <li><a href="files/lessons_pages/section_07.html">Section 7 Title</a></li>
-                    <li><a href="files/lessons_pages/section_08.html">Section 8 Title</a></li>
-                    <li><a href="files/lessons_pages/section_09.html">Section 9 Title</a></li>
-                    <li><a href="files/lessons_pages/section_10.html">Section 10 Title</a></li>
-                </ul>
-            </li>
-
-             <!-- Add more main option list items here if needed -->
-
-        </ul>
+    <div class="lessons-overview-container-grid"> <!-- Changed container class -->
+        <div class="lesson-grid">
+            <div class="lesson-grid-item">
+                <a href="files/controls_overview.html" class="lesson-wheel-link">
+                    <img src="files/link_assets/jd_tractor.png" alt="Lesson 25" class="lesson-wheel-image">
+                 </a>
+                <div class="lesson-title-below">CAB CONTROLS INTERACTION</div>
+            </div>             
+            <div class="lesson-grid-item">
+                <a href="files/lessons_overview.html" class="lesson-wheel-link">
+                    <img src="files/link_assets/jd_tractor.png" alt="Lesson 25" class="lesson-wheel-image">
+                </a>
+                <div class="lesson-title-below">OPERATOR´S MANUAL LESSONS</div>
+            </div>
+        </div>
     </div>
+</div>    
 
     <!-- Links to the consolidated JavaScript file -->
 
