Menu structure updated along different pages. CSS Updated

--- a/files/controls_pages/section_01.html
+++ b/files/controls_pages/section_01.html
@@ -3,18 +3,28 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Cabin Controls - Front / Rear</title> <!-- Make title specific -->
+    <title>Main Cabin Controls - Front / Rear</title>
+    
+    <!-- Links to the external CSS file -->
     <link rel="stylesheet" href="../../css/styles.css">
+
 </head>
+<!-- Use content-page class for consistent body padding -->
 <body class="content-page">
+     
+     <!-- Back to Menu Button -->
+     <div class="back-button-container"> <!-- Container div for centering -->
+          <!-- Back to main menu button / Path: Up two levels from files/controls_pages/ to root index.html -->
+          <a href="../../index.html" class="back-button">Back to Main Menu</a>
+     </div>
 
-    <h1 class="page-header">Main Cabin Controls - Front / Rear</h1> <!-- Make header specific -->
+     <h1 class="page-header">Main Cabin Controls - Front / Rear</h1> <!-- Make header specific -->
 
-    <!-- Tooltips defined once -->
-    <div class="tooltip" id="question-tooltip"></div>
-    <div class="tooltip answer" id="answer-tooltip"></div>
+     <!-- Tooltips defined once -->
+     <div class="tooltip" id="question-tooltip"></div>
+     <div class="tooltip answer" id="answer-tooltip"></div>
 
-    <div class="main-grid-container">
+     <div class="main-grid-container">
           <!-- Section 1 within this page -->
           <!-- Added data-section-id="1" -->
           <div class="interactive-section" data-section-id="1">
@@ -91,12 +101,6 @@
           </div>
      </div> 
      <!-- End main-grid-container -->
-
-     <!-- Back to Menu Button -->
-     <!-- Wrapper div for centering -->
-     <div style="text-align: center; margin-top: 30px; margin-bottom: 20px;">
-          <a href="../../index.html" class="back-button">Back to Main Menu</a>
-     </div>
 
      <!-- Back to Top Button -->
      <!-- Using an arrow character -->
