Controls and lessons pages updated. First mock up of Lessons created with audio plus pdf

--- a/files/controls_pages/section_01.html
+++ b/files/controls_pages/section_01.html
@@ -12,10 +12,12 @@
 <!-- Use content-page class for consistent body padding -->
 <body class="content-page">
      
-     <!-- Back to Menu Button -->
-     <div class="back-button-container"> <!-- Container div for centering -->
-          <!-- Back to main menu button / Path: Up two levels from files/controls_pages/ to root index.html -->
-          <a href="../../index.html" class="back-button">Back to Main Menu</a>
+    <!-- Back to Overview/Menu Button -->
+    <div class="back-button-container"> <!-- Container div for centering -->
+     <!-- Option 1: Link back to lesson overview -->
+      <a href="../controls_overview.html" class="back-button">Back to Cab Controls Interaction</a>
+     <!-- Option 2: Link back to main index (uncomment if preferred) -->
+     <a href="../../index.html" class="back-button">Back to Main Menu</a>
      </div>
 
      <h1 class="page-header">Main Cabin Controls - Front / Rear</h1> <!-- Make header specific -->
@@ -30,7 +32,7 @@
           <div class="interactive-section" data-section-id="1">
           <h2>Front Controls</h2>
                <div class="tractor-container">
-               <img src="../img/section_01/Front Controls.jpg" alt="Front Controls" class="tractor-image">
+               <img src="../controls_img/section_01/Front Controls.jpg" alt="Front Controls" class="tractor-image">
                <!-- Hotspots with embedded data -->
                     <div class="hotspot" data-letter="A"
                          data-question="What lever lets you change the steering wheel's up/down angle for a comfortable driving position?"
@@ -70,7 +72,7 @@
           <div class="interactive-section" data-section-id="2">
           <h2>Foot Operated Controls</h2>
                <div class="tractor-container">
-                    <img src="../img/section_01/Foot Operated Controls.jpg" alt="Foot Operated Controls" class="tractor-image">
+                    <img src="../controls_img/section_01/Foot Operated Controls.jpg" alt="Foot Operated Controls" class="tractor-image">
                     <!-- Hotspots with embedded data -->
         	          <div class="hotspot" data-letter="A"
              		     data-question="What pedal do you press to temporarily disconnect power when changing gears or stopping?"
@@ -90,9 +92,9 @@
 	     <!-- Section 3 within this page -->
           <!-- Added data-section-id="3" -->
           <div class="interactive-section" data-section-id="3">
-          <h2>Rear Lever</h2> 
+          <h2>Rear Controls</h2> 
                <div class="tractor-container">
-                    <img src="../img/section_01/Rear Controls.jpg" alt="Rear Controls" class="tractor-image">
+                    <img src="../controls_img/section_01/Rear Controls.jpg" alt="Rear Controls" class="tractor-image">
                     <!-- Hotspots with embedded data -->
                     <div class="hotspot" data-letter="A"
                          data-question="Which knob adjusts the speed at which an implement is lowered by the rear hitch?"
@@ -103,7 +105,7 @@
      <!-- End main-grid-container -->
 
      <!-- Back to Top Button -->
-     <!-- Using an arrow character -->
+
      <a href="#" id="backToTopBtn" class="back-to-top-button" title="Go to top">⇧</a>
 
      <!-- Link to the external JavaScript file -->
