--- a/files/controls_pages/section_02.html
+++ b/files/controls_pages/section_02.html
@@ -12,11 +12,13 @@
 <!-- Use content-page class for consistent body padding -->
 <body class="content-page">
     
-    <!-- Back to Menu Button -->
+    <!-- Back to Overview/Menu Button -->
     <div class="back-button-container"> <!-- Container div for centering -->
-        <!-- Back to main menu button / Path: Up two levels from files/controls_pages/ to root index.html -->
+        <!-- Option 1: Link back to lesson overview -->
+         <a href="../controls_overview.html" class="back-button">Back to Cab Controls Interaction</a>
+        <!-- Option 2: Link back to main index (uncomment if preferred) -->
         <a href="../../index.html" class="back-button">Back to Main Menu</a>
-    </div>
+        </div>
 
     <h1 class="page-header">Right Console Controls</h1> <!-- Make header specific -->
 
@@ -30,7 +32,7 @@
         <div class="interactive-section" data-section-id="4">
         <h2>Pickup Hitch Control</h2>
             <div class="tractor-container">
-            <img src="../img/section_02/Pickup Hitch Control.jpg" alt="Pickup Hitch Control" class="tractor-image">
+            <img src="../controls_img/section_02/Pickup Hitch Control.jpg" alt="Pickup Hitch Control" class="tractor-image">
                <!-- Hotspots with embedded data -->
                <div class="hotspot" data-letter="A"
                     data-question="Which levers direct hydraulic fluid to specific attachments like loaders or cultivators?"
@@ -100,7 +102,7 @@
         <div class="interactive-section" data-section-id="5">
         <h2>Mechanical Hitch Control</h2>
             <div class="tractor-container">
-            <img src="../img/section_02/Mechanical Hitch Control.jpg" alt="Mechanical Hitch Control" class="tractor-image">
+            <img src="../controls_img/section_02/Mechanical Hitch Control.jpg" alt="Mechanical Hitch Control" class="tractor-image">
                 <!-- Hotspots with embedded data -->
         	    <div class="hotspot" data-letter="A"
                     data-question="Which levers direct hydraulic fluid to specific attachments like loaders or cultivators?"
