--- a/files/lessons_overview.html
+++ b/files/lessons_overview.html
@@ -45,6 +45,23 @@
                 </a>
                 <div class="menu-link-title">Lesson 1: Introduction</div>
             </div>
+
+            <!-- Lesson 4 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 1: Introduction</div>
+            </div>
+
+            <!-- Lesson 5 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 1: Introduction</div>
+            </div>
+            
             <!-- ... Add grid items for Lessons 4 through 26 ... -->
             <!-- Lesson 4 -->
             <!-- Lesson 4 -->
