--- a/files/lessons_overview.html
+++ b/files/lessons_overview.html
@@ -33,36 +33,34 @@
             </div>
             <!-- Lesson 2 -->
             <div class="menu-grid-item">
-                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                <a href="lessons_pages/Lesson 02_General Information/lesson_02.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 1: Introduction</div>
+                <div class="menu-link-title">Lesson 2: General Information</div>
             </div>    
             <!-- Lesson 3 -->
             <div class="menu-grid-item">
-                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                <a href="lessons_pages/Lesson 03_Safety Precautions/lesson_03.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 1: Introduction</div>
+                <div class="menu-link-title">Lesson 3: Safety Precautions</div>
             </div>
-
             <!-- Lesson 4 -->
             <div class="menu-grid-item">
-                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                <a href="lessons_pages/Lesson 04_Safety Signs/lesson_04.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 1: Introduction</div>
+                <div class="menu-link-title">Lesson 4: Safety Signs</div>
             </div>
-
             <!-- Lesson 5 -->
             <div class="menu-grid-item">
-                <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
+                <a href="lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 1: Introduction</div>
+                <div class="menu-link-title">Lesson 5: Controls and Instruments Operation and Maintenance</div>
             </div>
             
-            <!-- ... Add grid items for Lessons 4 through 26 ... -->
+            <!-- ... Add grid items for Lessons 6 through 26 ... -->
             <!-- Lesson 4 -->
             <!-- Lesson 4 -->
             <!-- Lesson 4 -->
