--- a/files/lessons_pages/Lesson 02_General Information/lesson_02.html
+++ b/files/lessons_pages/Lesson 02_General Information/lesson_02.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- === CHANGE Title === -->
-    <title>Lesson 01: Introduction</title>
+    <title>Lesson 02: General Information</title>
     <!-- Path: Up THREE levels from files/lessons/lesson_XX/ to root, then into css/ -->
     <link rel="stylesheet" href="../../../css/styles.css">
 </head>
@@ -19,20 +19,20 @@
     </div>
 
     <!-- === CHANGE Header Text === -->
-    <h1 class="page-header">Lesson 01:<br/>Introduction</h1>
+    <h1 class="page-header">Lesson 02:<br/>General Information</h1>
 
     <div class="lesson-content-container"> <!-- Wrapper for lesson elements -->
 
         <!-- Audio Player Section -->
         <div class="audio-player-container">
-            <h2>Lesson 01: The Podcast</h2>
-           <audio controls src="01_JDS5M_Introduction_Podcast.mp3" preload="yes">
+            <h2>Lesson 02: The Podcast</h2>
+           <audio controls src="02_JDS5M_General Information_Podcast.mp3" preload="yes">
            </audio>
        </div>
         <!-- PDF Viewer Section -->
         <div class="pdf-viewer-container">
-             <h2>Lesson 01: The PDF Manual</h2>
-            <embed src="01_JDS5M_Introduction_(6pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+             <h2>Lesson 02: The PDF Manual</h2>
+            <embed src="02_JDS5M_General Information_(5pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
             </embed>
         </div>
     </div> <!-- End lesson-content-container -->
