--- a/files/lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html
+++ b/files/lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- === CHANGE Title === -->
-    <title>Lesson 01: Introduction</title>
+    <title>Lesson 05: Controls and Instruments Operation and Maintenance</title>
     <!-- Path: Up THREE levels from files/lessons/lesson_XX/ to root, then into css/ -->
     <link rel="stylesheet" href="../../../css/styles.css">
 </head>
@@ -19,22 +19,26 @@
     </div>
 
     <!-- === CHANGE Header Text === -->
-    <h1 class="page-header">Lesson 01:<br/>Introduction</h1>
+    <h1 class="page-header">Lesson 05:<br/>Controls and Instruments Operation and Maintenance</h1>
 
     <div class="lesson-content-container"> <!-- Wrapper for lesson elements -->
 
         <!-- Audio Player Section -->
         <div class="audio-player-container">
-            <h2>Lesson 01: The Podcast</h2>
-           <audio controls src="01_JDS5M_Introduction_Podcast.mp3" preload="yes">
+            <h2>Lesson 05: The Podcast</h2>
+           <audio controls src="05_25_JDS5M_Controls and Instruments Operation and Maintenance_Podcast.mp3" preload="yes">
            </audio>
        </div>
         <!-- PDF Viewer Section -->
         <div class="pdf-viewer-container">
-             <h2>Lesson 01: The PDF Manual</h2>
-            <embed src="01_JDS5M_Introduction_(6pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+             <h2>Lesson 05: The PDF Manual</h2> <!-- Or specific page number -->
+             <!-- === CHANGE PDF Filename === -->
+            <embed src="05_25_JDS5M_Controls and Instruments Operation and Maintenance_(12_1pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
             </embed>
         </div>
+
+
+
     </div> <!-- End lesson-content-container -->
 
 
