All lessons code homogenic. DOuble lesson part js update logic, first 10 lessons worked out.

--- a/files/lessons_overview.html
+++ b/files/lessons_overview.html
@@ -29,60 +29,86 @@
                 <a href="lessons_pages/Lesson 01_Introduction/lesson_01.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 1: Introduction</div>
+                <div class="menu-link-title">Lesson 1:<br/>Introduction</div>
             </div>
             <!-- Lesson 2 -->
             <div class="menu-grid-item">
                 <a href="lessons_pages/Lesson 02_General Information/lesson_02.html" class="menu-link">
                     <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 2: General Information</div>
+                <div class="menu-link-title">Lesson 2:<br/>General Information</div>
             </div>    
             <!-- Lesson 3 -->
             <div class="menu-grid-item">
                 <a href="lessons_pages/Lesson 03_Safety Precautions/lesson_03.html" class="menu-link">
-                    <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 2" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 3: Safety Precautions</div>
+                <div class="menu-link-title">Lesson 3:<br/>Safety Precautions</div>
             </div>
             <!-- Lesson 4 -->
             <div class="menu-grid-item">
                 <a href="lessons_pages/Lesson 04_Safety Signs/lesson_04.html" class="menu-link">
-                    <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 3" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 4: Safety Signs</div>
+                <div class="menu-link-title">Lesson 4:<br/>Safety Signs</div>
             </div>
             <!-- Lesson 5 -->
             <div class="menu-grid-item">
                 <a href="lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html" class="menu-link">
-                    <img src="link_assets/jd_wheel.png" alt="Lesson 1" class="link-image wheel">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 4" class="link-image wheel">
                 </a>
-                <div class="menu-link-title">Lesson 5: Controls and Instruments Operation and Maintenance</div>
+                <div class="menu-link-title">Lesson 5:<br/>Controls and Instruments Operation and Maintenance</div>
             </div>
-            
-            <!-- ... Add grid items for Lessons 6 through 26 ... -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-                <!-- Lesson 10 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-                <!-- Lesson 20 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
-            <!-- Lesson 4 -->
+            <!-- Lesson 6 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 06_Engine Operation and Maintenance/lesson_06.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 5" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 6:<br/>Engine Operation and Maintenance</div>
+            </div>
+            <!-- Lesson 7 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 07_Air Intake, Fuel, Coolant and Exhaust Operation and Maintenance/lesson_07.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 7" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 7:<br/>Air Intake, Fuel, Coolant and Exhaust Operation and Maintenance</div>
+            </div>
+            <!-- Lesson 8 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 08 Electrical and Lighting Operation and Maintenance/lesson_08.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 8" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 8:<br/>Electrical and Lighting Operation and Maintenance</div>
+            </div>
+            <!-- Lesson 9 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 09_Displays, Software and Electronics Operation/lesson_09.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 9" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 9:<br/>Displays, Software and Electronics Operation</div>
+            </div>
+            <!-- Lesson 10 -->
+            <div class="menu-grid-item">
+                <a href="lessons_pages/Lesson 10_Drive Train Operation and Maintenance CONTENTS/lesson_10.html" class="menu-link">
+                    <img src="link_assets/jd_wheel.png" alt="Lesson 10" class="link-image wheel">
+                </a>
+                <div class="menu-link-title">Lesson 10:<br/>Drive Train Operation and Maintenance Contents</div>
+            </div>
+            <!-- Lesson 11 -->
+            <!-- Lesson 12 -->
+            <!-- Lesson 13 -->
+            <!-- Lesson 14 -->
+            <!-- Lesson 15 -->
+            <!-- Lesson 16 -->
+            <!-- Lesson 17 -->
+            <!-- Lesson 18 -->
+            <!-- Lesson 19 -->
+            <!-- Lesson 20 -->
+            <!-- Lesson 21 -->
+            <!-- Lesson 22 -->
+            <!-- Lesson 23 -->
+            <!-- Lesson 24 -->
+            <!-- Lesson 25 -->
             <!-- Lesson 26 -->
         </div>
         <!-- End of menu-grid -->
