--- a/files/lessons_pages/Lesson 10_Drive Train Operation and Maintenance CONTENTS/lesson_10.html
+++ b/files/lessons_pages/Lesson 10_Drive Train Operation and Maintenance CONTENTS/lesson_10.html
@@ -5,9 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- === CHANGE HTML Title === -->
-    <title>Lesson 4: Safety Signs</title>
+    <title>Lesson 10: Drive Train Operation and Maintenance Contents</title>
 
-    <!-- Path: Up THREE levels from files/lessons/lesson_XX/ to root, then into css/ -->
+<!-- Path: Up THREE levels from files/lessons/lesson_XX/ to root, then into css/ -->
     <link rel="stylesheet" href="../../../css/styles.css">
 
 </head>
@@ -22,17 +22,17 @@
     </div>
 
 <!-- === CHANGE Lesson Title Text === -->
-    <h1 class="page-header">Lesson 4:<br/>Safety Signs</h1>
+    <h1 class="page-header">Lesson 10:<br/>Drive Train Operation and Maintenance Contents</h1>
     
     <!-- Wrapper for lesson elements -->
-    <div class="lesson-content-container"> 
+    <div class="lesson-content-container">
 
         <!-- Audio Player Section -->
         <div class="audio-player-container">
             <h2>The Podcast</h2>
 
 <!-- === CHANGE MP3 Filename === -->
-            <audio controls src="04_JDS5M_Safety Signs_Podcast.mp3">
+            <audio controls src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_Podcast.mp3">
             </audio>
 
         </div>
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="04_JDS5M_Safety Signs_(4pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+            <embed src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_(1, 1pg).pdf#view=FitH&toolbar=0&navpanes=0">
             </embed>
 
         </div>
