Fixed issu on Android OS about opening pdf. Needs value in embed div called "type: application/pdf"

--- a/files/lessons_pages/Lesson 01_Introduction/lesson_01.html
+++ b/files/lessons_pages/Lesson 01_Introduction/lesson_01.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="01_JDS5M_Introduction_(6pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+            <embed src="01_JDS5M_Introduction_(6pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
