--- a/files/lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html
+++ b/files/lessons_pages/Lesson 05_Controls and Instruments Operation and Maintenance/lesson_05.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="05_25_JDS5M_Controls and Instruments Operation and Maintenance_(12_1pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+            <embed src="05_25_JDS5M_Controls and Instruments Operation and Maintenance_(12_1pgs).pdf#view=FitH&toolbar=0&navpanes=0"  type="application/pdf">
             </embed>
 
         </div>
