--- a/files/lessons_pages/Lesson 07_Air Intake, Fuel, Coolant and Exhaust Operation and Maintenance/lesson_07.html
+++ b/files/lessons_pages/Lesson 07_Air Intake, Fuel, Coolant and Exhaust Operation and Maintenance/lesson_07.html
@@ -56,7 +56,7 @@
                     <h3>The PDF Manual</h3
                         >
 <!-- === CHANGE Part 1 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="07_JDS5M_Air Intake, Fuel, Coolant and Exhaust Operation_(12pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="07_JDS5M_Air Intake, Fuel, Coolant and Exhaust Operation_(12pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
@@ -93,7 +93,7 @@
                     <h3>The PDF Manual</h3>
 
 <!-- === CHANGE Part 2 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="27_JDS5M_Air, Fuel, Coolant and Exhaust Maintenance_(16pgs)_.pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="27_JDS5M_Air, Fuel, Coolant and Exhaust Maintenance_(16pgs)_.pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
