--- a/files/lessons_pages/Lesson 09_Displays, Software and Electronics Operation/lesson_09.html
+++ b/files/lessons_pages/Lesson 09_Displays, Software and Electronics Operation/lesson_09.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="09_JDS5M_Displays_Software, and Electronics Operation_(3pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+            <embed src="09_JDS5M_Displays_Software, and Electronics Operation_(3pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
