--- a/files/lessons_pages/Lesson 10_Drive Train Operation and Maintenance CONTENTS/lesson_10.html
+++ b/files/lessons_pages/Lesson 10_Drive Train Operation and Maintenance CONTENTS/lesson_10.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_(1, 1pg).pdf#view=FitH&toolbar=0&navpanes=0">
+            <embed src="10_29_JDS5M_Drive Train Operation and Maintenance_CONTENTS_(1, 1pg).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
