--- a/files/lessons_pages/Lesson 02_General Information/lesson_02.html
+++ b/files/lessons_pages/Lesson 02_General Information/lesson_02.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="02_JDS5M_General Information_(5pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+            <embed src="02_JDS5M_General Information_(5pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
