--- a/files/lessons_pages/Lesson 03_Safety Precautions/lesson_03.html
+++ b/files/lessons_pages/Lesson 03_Safety Precautions/lesson_03.html
@@ -42,7 +42,7 @@
             <h2>The PDF Manual</h2>
 
 <!-- === CHANGE PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-            <embed src="03_JDS5M_Safety Precautions_(18pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf" width="100%" height="700px">
+            <embed src="03_JDS5M_Safety Precautions_(18pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
             </embed>
 
         </div>
