--- a/files/lessons_pages/Lesson 06_Engine Operation and Maintenance/lesson_06.html
+++ b/files/lessons_pages/Lesson 06_Engine Operation and Maintenance/lesson_06.html
@@ -56,7 +56,7 @@
                     <h3>The PDF Manual</h3
                         >
 <!-- === CHANGE Part 1 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="06_JDS5M_Engine Operation_(8pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="06_JDS5M_Engine Operation_(8pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
@@ -93,7 +93,7 @@
                     <h3>The PDF Manual</h3>
 
 <!-- === CHANGE Part 2 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="26_JDS5M_Engine Maintenance_(9pgs)_.pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="26_JDS5M_Engine Maintenance_(9pgs)_.pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
