--- a/files/lessons_pages/Lesson 08 Electrical and Lighting Operation and Maintenance/lesson_08.html
+++ b/files/lessons_pages/Lesson 08 Electrical and Lighting Operation and Maintenance/lesson_08.html
@@ -56,7 +56,7 @@
                     <h3>The PDF Manual</h3
                         >
 <!-- === CHANGE Part 1 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="08_JDS5M_Electrical and Lighting Operation_(12pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="08_JDS5M_Electrical and Lighting Operation_(12pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
@@ -93,7 +93,7 @@
                     <h3>The PDF Manual</h3>
 
 <!-- === CHANGE Part 2 PDF Filename / No app layout: #view=FitH&toolbar=0&navpanes=0 === -->
-                    <embed src="28_JDS5M_Electrical and Lighting Maintenance_(14pgs).pdf#view=FitH&toolbar=0&navpanes=0">
+                    <embed src="28_JDS5M_Electrical and Lighting Maintenance_(14pgs).pdf#view=FitH&toolbar=0&navpanes=0" type="application/pdf">
                     </embed>
 
                 </div>
